Fixed 3px gap at top of Stuck Menu

--- a/css/savs-template_style.css
+++ b/css/savs-template_style.css
@@ -52,7 +52,7 @@ h1, h2, h3, h4, h5, h6, span, p {
 
 .stuckMenu {
 	position: fixed;
-	top: 3px;
+	top: 0px;
 }
 
 .top-menu .navbar-toggle {
